train_test_split + petits tests

--- a/Notebooks/version1.ipynb
+++ b/Notebooks/version1.ipynb
@@ -1,1 +1,325 @@
-{"cells":[{"metadata":{},"cell_type":"markdown","source":"In this notebook we describe the code use to produce the baseline. "},{"metadata":{},"cell_type":"markdown","source":"# Data and Libraries"},{"metadata":{"_uuid":"d629ff2d2480ee46fbb7e2d37f6b5fab8052498a","_cell_guid":"79c7e3d0-c299-4dcb-8224-4455121ee9b0","trusted":true},"cell_type":"code","source":"import pandas as pd\nimport pickle\n\nDATA_PATH = \"/kaggle/input/defi-ia-insa-toulouse\"\ntrain_df = pd.read_json(DATA_PATH+\"/train.json\")\ntest_df = pd.read_json(DATA_PATH+\"/test.json\")\ntrain_label = pd.read_csv(DATA_PATH+\"/train_label.csv\")","execution_count":1,"outputs":[]},{"metadata":{},"cell_type":"markdown","source":"# Cleaning\n\nThe only cleaning transformation applied here is that we `lower` the data so that all words are lower case. \nHence `research`and `Research` will be considered as similar word.\n\nYou might want to look at other cleaning step such that removing stopwords, stemming words, etc."},{"metadata":{"trusted":true},"cell_type":"code","source":"train_df[\"description_lower\"] = [x.lower() for x in train_df.description]\ntest_df[\"description_lower\"] = [x.lower() for x in test_df.description]","execution_count":2,"outputs":[]},{"metadata":{},"cell_type":"markdown","source":"# Vectorization\n\nWe use TfidfVectorizer to transform words from text to numerical vector data.  \n\nMore vectorize are available on scikit-learn -> https://scikit-learn.org/stable/modules/classes.html#module-sklearn.feature_extraction.text\n\nYou also may want to have a look at words embedding methods (Word2vec, Glove, etc..)"},{"metadata":{"trusted":true},"cell_type":"code","source":"from sklearn.feature_extraction.text import TfidfVectorizer\ntransformer = TfidfVectorizer().fit(train_df[\"description_lower\"].values)\nprint(\"NB features: %d\" %(len(transformer.vocabulary_)))\nX_train = transformer.transform(train_df[\"description_lower\"].values)\nX_test = transformer.transform(test_df[\"description_lower\"].values)\nX_train","execution_count":3,"outputs":[{"output_type":"stream","text":"NB features: 230368\n","name":"stdout"},{"output_type":"execute_result","execution_count":3,"data":{"text/plain":"<217197x230368 sparse matrix of type '<class 'numpy.float64'>'\n\twith 9851657 stored elements in Compressed Sparse Row format>"},"metadata":{}}]},{"metadata":{},"cell_type":"markdown","source":"# Learning\n\nWe use a simple Logistic Regression model with scikit learn default arguments'value to train the baseline model. "},{"metadata":{"trusted":true},"cell_type":"code","source":"from sklearn.linear_model import LogisticRegression\nY_train = train_label.Category.values\nmodel = LogisticRegression()\nmodel.fit(X_train, Y_train)","execution_count":null,"outputs":[]},{"metadata":{},"cell_type":"markdown","source":"# Prediction"},{"metadata":{"trusted":true},"cell_type":"code","source":"predictions = model.predict(X_test)\npredictions","execution_count":null,"outputs":[]},{"metadata":{},"cell_type":"markdown","source":"# File Generation"},{"metadata":{"trusted":true},"cell_type":"code","source":"test_df[\"Category\"] = predictions\nbaseline_file = test_df[[\"Id\",\"Category\"]]\nbaseline_file.to_csv(\"/kaggle/working/baseline.csv\", index=False)","execution_count":null,"outputs":[]},{"metadata":{"trusted":true},"cell_type":"code","source":"","execution_count":null,"outputs":[]}],"metadata":{"kernelspec":{"name":"python3","display_name":"Python 3","language":"python"},"language_info":{"name":"python","version":"3.7.6","mimetype":"text/x-python","codemirror_mode":{"name":"ipython","version":3},"pygments_lexer":"ipython3","nbconvert_exporter":"python","file_extension":".py"}},"nbformat":4,"nbformat_minor":4}
+{
+ "cells": [
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "In this notebook we describe the code use to produce the baseline. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Data and Libraries"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {
+    "_cell_guid": "79c7e3d0-c299-4dcb-8224-4455121ee9b0",
+    "_uuid": "d629ff2d2480ee46fbb7e2d37f6b5fab8052498a"
+   },
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "import pickle\n",
+    "import matplotlib.pyplot as plt\n",
+    "import numpy as np\n",
+    "\n",
+    "#DATA_PATH = \"/kaggle/input/defi-ia-insa-toulouse\"\n",
+    "DATA_PATH = '../Data'\n",
+    "\n",
+    "train_df = pd.read_json(DATA_PATH+\"/train.json\")\n",
+    "test_df = pd.read_json(DATA_PATH+\"/test.json\")\n",
+    "train_label = pd.read_csv(DATA_PATH+\"/train_label.csv\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Cleaning\n",
+    "\n",
+    "The only cleaning transformation applied here is that we `lower` the data so that all words are lower case. \n",
+    "Hence `research`and `Research` will be considered as similar word.\n",
+    "\n",
+    "You might want to look at other cleaning step such that removing stopwords, stemming words, etc."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "train_df[\"description_lower\"] = [x.lower() for x in train_df.description]\n",
+    "test_df[\"description_lower\"] = [x.lower() for x in test_df.description]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Vectorization\n",
+    "\n",
+    "We use TfidfVectorizer to transform words from text to numerical vector data.  \n",
+    "\n",
+    "More vectorize are available on scikit-learn -> https://scikit-learn.org/stable/modules/classes.html#module-sklearn.feature_extraction.text\n",
+    "\n",
+    "You also may want to have a look at words embedding methods (Word2vec, Glove, etc..)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "NB features: 230368\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<217197x230368 sparse matrix of type '<class 'numpy.float64'>'\n",
+       "\twith 9851657 stored elements in Compressed Sparse Row format>"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from sklearn.feature_extraction.text import TfidfVectorizer\n",
+    "transformer = TfidfVectorizer().fit(train_df[\"description_lower\"].values)\n",
+    "print(\"NB features: %d\" %(len(transformer.vocabulary_)))\n",
+    "X_train = transformer.transform(train_df[\"description_lower\"].values)\n",
+    "X_test = transformer.transform(test_df[\"description_lower\"].values)\n",
+    "X_train"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Train/Test Split"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.model_selection import train_test_split\n",
+    "Y_train = train_label.Category.values\n",
+    "\n",
+    "x_train,x_test,y_train,y_test = train_test_split(X_train,Y_train,test_size=0.2,random_state=0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "D:\\Anaconda3\\lib\\site-packages\\sklearn\\linear_model\\_logistic.py:764: ConvergenceWarning: lbfgs failed to converge (status=1):\n",
+      "STOP: TOTAL NO. of ITERATIONS REACHED LIMIT.\n",
+      "\n",
+      "Increase the number of iterations (max_iter) or scale the data as shown in:\n",
+      "    https://scikit-learn.org/stable/modules/preprocessing.html\n",
+      "Please also refer to the documentation for alternative solver options:\n",
+      "    https://scikit-learn.org/stable/modules/linear_model.html#logistic-regression\n",
+      "  extra_warning_msg=_LOGISTIC_SOLVER_CONVERGENCE_MSG)\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "LogisticRegression()"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from sklearn.linear_model import LogisticRegression\n",
+    "model = LogisticRegression()\n",
+    "model.fit(x_train,y_train)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Learning\n",
+    "\n",
+    "We use a simple Logistic Regression model with scikit learn default arguments'value to train the baseline model. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "D:\\Anaconda3\\lib\\site-packages\\sklearn\\linear_model\\_logistic.py:764: ConvergenceWarning: lbfgs failed to converge (status=1):\n",
+      "STOP: TOTAL NO. of ITERATIONS REACHED LIMIT.\n",
+      "\n",
+      "Increase the number of iterations (max_iter) or scale the data as shown in:\n",
+      "    https://scikit-learn.org/stable/modules/preprocessing.html\n",
+      "Please also refer to the documentation for alternative solver options:\n",
+      "    https://scikit-learn.org/stable/modules/linear_model.html#logistic-regression\n",
+      "  extra_warning_msg=_LOGISTIC_SOLVER_CONVERGENCE_MSG)\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "LogisticRegression()"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from sklearn.linear_model import LogisticRegression\n",
+    "Y_train = train_label.Category.values\n",
+    "model = LogisticRegression()\n",
+    "model.fit(X_train, Y_train)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Score f1: 0.730753874438092\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.metrics import f1_score\n",
+    "\n",
+    "pred = model.predict(x_test)\n",
+    "score_f1 = f1_score(y_test,pred,average='macro')\n",
+    "print(\"Score f1:\",score_f1)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Prediction"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([ 6, 20, 24, ..., 25, 26, 15], dtype=int64)"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "predictions = model.predict(X_test)\n",
+    "predictions"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([19,  3, 19, ..., 19, 19,  1], dtype=int64)"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pred2 = model.predict(X_train)\n",
+    "pred2"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# File Generation"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "test_df[\"Category\"] = predictions\n",
+    "baseline_file = test_df[[\"Id\",\"Category\"]]\n",
+    "baseline_file.to_csv(\"/kaggle/working/baseline.csv\", index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  }
+ ],
+ "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.7.7"
+  }
+ },
+ "nbformat": 4,
+ "nbformat_minor": 4
+}
