--- a/Notebooks/version1.ipynb
+++ b/Notebooks/version1.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {
     "_cell_guid": "79c7e3d0-c299-4dcb-8224-4455121ee9b0",
     "_uuid": "d629ff2d2480ee46fbb7e2d37f6b5fab8052498a"
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -111,7 +111,7 @@
        "4    He focuses on cloud security, identity and ac...      M"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -129,7 +129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -143,7 +143,135 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\luval\\anaconda3\\envs\\Defi\\lib\\site-packages\\ipykernel_launcher.py:2: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+      "Try using .loc[row_indexer,col_indexer] = value instead\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  \n",
+      "C:\\Users\\luval\\anaconda3\\envs\\Defi\\lib\\site-packages\\ipykernel_launcher.py:4: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+      "Try using .loc[row_indexer,col_indexer] = value instead\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  after removing the cwd from sys.path.\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>description</th>\n",
+       "      <th>gender</th>\n",
+       "      <th>label</th>\n",
+       "      <th>category_name</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Id</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>198219</th>\n",
+       "      <td>She is trained in cognitive behavior therapy ...</td>\n",
+       "      <td>F</td>\n",
+       "      <td>22</td>\n",
+       "      <td>psychologist</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1460</th>\n",
+       "      <td>He spent over 8 years in PWC’s Audit and Advi...</td>\n",
+       "      <td>M</td>\n",
+       "      <td>9</td>\n",
+       "      <td>accountant</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>126976</th>\n",
+       "      <td>For a number of years Haig has been exploring...</td>\n",
+       "      <td>M</td>\n",
+       "      <td>19</td>\n",
+       "      <td>professor</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>184223</th>\n",
+       "      <td>Prior to joining the firm, Michelle was the h...</td>\n",
+       "      <td>F</td>\n",
+       "      <td>26</td>\n",
+       "      <td>attorney</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>144124</th>\n",
+       "      <td>While his early works were greatly influenced...</td>\n",
+       "      <td>M</td>\n",
+       "      <td>25</td>\n",
+       "      <td>composer</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                              description gender  label  \\\n",
+       "Id                                                                        \n",
+       "198219   She is trained in cognitive behavior therapy ...      F     22   \n",
+       "1460     He spent over 8 years in PWC’s Audit and Advi...      M      9   \n",
+       "126976   For a number of years Haig has been exploring...      M     19   \n",
+       "184223   Prior to joining the firm, Michelle was the h...      F     26   \n",
+       "144124   While his early works were greatly influenced...      M     25   \n",
+       "\n",
+       "       category_name  \n",
+       "Id                    \n",
+       "198219  psychologist  \n",
+       "1460      accountant  \n",
+       "126976     professor  \n",
+       "184223      attorney  \n",
+       "144124      composer  "
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#ajout de colonnes avec label dans X_train :\n",
+    "X_train[\"label\"]=Y_train.iloc[:,0]\n",
+    "category_df = pd.read_csv(DATA_PATH+\"/categories_string.csv\")\n",
+    "X_train[\"category_name\"] = [category_df[category_df[\"1\"]==x].values[0][0] for x in X_train[\"label\"].values]\n",
+    "X_train.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
    "metadata": {
     "scrolled": true
    },
@@ -350,7 +478,7 @@
        "27  0.010802  0.009461"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -363,7 +491,6 @@
    ]
   },
   {
-<<<<<<< HEAD
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -407,90 +534,49 @@
    ]
   },
   {
-=======
->>>>>>> parent of c76a5aa... add cleaning
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "D:\\Anaconda3\\lib\\site-packages\\sklearn\\linear_model\\_logistic.py:764: ConvergenceWarning: lbfgs failed to converge (status=1):\n",
-      "STOP: TOTAL NO. of ITERATIONS REACHED LIMIT.\n",
+      "C:\\Users\\luval\\anaconda3\\envs\\Defi\\lib\\site-packages\\ipykernel_launcher.py:1: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+      "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
-      "Increase the number of iterations (max_iter) or scale the data as shown in:\n",
-      "    https://scikit-learn.org/stable/modules/preprocessing.html\n",
-      "Please also refer to the documentation for alternative solver options:\n",
-      "    https://scikit-learn.org/stable/modules/linear_model.html#logistic-regression\n",
-      "  extra_warning_msg=_LOGISTIC_SOLVER_CONVERGENCE_MSG)\n"
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  \"\"\"Entry point for launching an IPython kernel.\n"
      ]
     },
-    {
-     "data": {
-      "text/plain": [
-       "LogisticRegression()"
-      ]
-     },
-     "execution_count": 19,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "from sklearn.linear_model import LogisticRegression\n",
-    "model = LogisticRegression()\n",
-    "model.fit(x_train,y_train)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 21,
-   "metadata": {},
-   "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Score f1: 0.730753874438092\n"
+      "Wall time: 3min 29s\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\luval\\anaconda3\\envs\\Defi\\lib\\site-packages\\ipykernel_launcher.py:2: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+      "Try using .loc[row_indexer,col_indexer] = value instead\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  \n"
      ]
     }
    ],
    "source": [
-    "from sklearn.metrics import f1_score\n",
-    "\n",
-    "pred = model.predict(x_test)\n",
-    "score_f1 = f1_score(y_test,pred,average='macro')\n",
-    "print(\"Score f1:\",score_f1)"
+    "%%time\n",
+    "X_train[\"description_cleaned\"] = [\" \".join(clean_txt(x)) for x in X_train[\"description\"].values]\n",
+    "X_test[\"description_cleaned\"] = [\" \".join(clean_txt(x)) for x in X_test[\"description\"].values]"
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Cleaning\n",
-    "\n",
-    "The only cleaning transformation applied here is that we `lower` the data so that all words are lower case. \n",
-    "Hence `research`and `Research` will be considered as similar word.\n",
-    "\n",
-    "You might want to look at other cleaning step such that removing stopwords, stemming words, etc."
-   ]
-  },
-  {
-<<<<<<< HEAD
-=======
-   "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "train_df[\"description_lower\"] = [x.lower() for x in train_df.description]\n",
-    "test_df[\"description_lower\"] = [x.lower() for x in test_df.description]"
-   ]
-  },
-  {
->>>>>>> parent of c76a5aa... add cleaning
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -505,39 +591,35 @@
   },
   {
    "cell_type": "code",
-<<<<<<< HEAD
    "execution_count": 16,
-=======
-   "execution_count": 3,
->>>>>>> parent of c76a5aa... add cleaning
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "NB features: 230368\n"
+      "NB features: 153106\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "<217197x230368 sparse matrix of type '<class 'numpy.float64'>'\n",
-       "\twith 9851657 stored elements in Compressed Sparse Row format>"
+       "<173757x153106 sparse matrix of type '<class 'numpy.float64'>'\n",
+       "\twith 5383957 stored elements in Compressed Sparse Row format>"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "from sklearn.feature_extraction.text import TfidfVectorizer\n",
-    "transformer = TfidfVectorizer().fit(train_df[\"description_lower\"].values)\n",
+    "transformer = TfidfVectorizer().fit(X_train[\"description_cleaned\"].values)\n",
     "print(\"NB features: %d\" %(len(transformer.vocabulary_)))\n",
-    "X_train = transformer.transform(train_df[\"description_lower\"].values)\n",
-    "X_test = transformer.transform(test_df[\"description_lower\"].values)\n",
-    "X_train"
+    "X_train_vect = transformer.transform(X_train[\"description_cleaned\"].values)\n",
+    "X_test_vect = transformer.transform(X_test[\"description_cleaned\"].values)\n",
+    "X_train_vect"
    ]
   },
   {
@@ -551,39 +633,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "D:\\Anaconda3\\lib\\site-packages\\sklearn\\linear_model\\_logistic.py:764: ConvergenceWarning: lbfgs failed to converge (status=1):\n",
-      "STOP: TOTAL NO. of ITERATIONS REACHED LIMIT.\n",
-      "\n",
-      "Increase the number of iterations (max_iter) or scale the data as shown in:\n",
-      "    https://scikit-learn.org/stable/modules/preprocessing.html\n",
-      "Please also refer to the documentation for alternative solver options:\n",
-      "    https://scikit-learn.org/stable/modules/linear_model.html#logistic-regression\n",
-      "  extra_warning_msg=_LOGISTIC_SOLVER_CONVERGENCE_MSG)\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "LogisticRegression()"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
+    "%%time\n",
     "from sklearn.linear_model import LogisticRegression\n",
-    "Y_train = train_label.Category.values\n",
-    "model = LogisticRegression()\n",
-    "model.fit(X_train, Y_train)"
+    "model = LogisticRegression(max_iter=500,n_jobs=-1)\n",
+    "model.fit(X_train_vect, Y_train.Category.values)"
    ]
   },
   {
@@ -595,44 +652,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([ 6, 20, 24, ..., 25, 26, 15], dtype=int64)"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "predictions = model.predict(X_test)\n",
+    "predictions = model.predict(X_test_vect)\n",
     "predictions"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([19,  3, 19, ..., 19, 19,  1], dtype=int64)"
-      ]
-     },
-     "execution_count": 10,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "pred2 = model.predict(X_train)\n",
+    "pred2 = model.predict(X_train_vect)\n",
     "pred2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.metrics import f1_score\n",
+    "score_f1 = f1_score(Y_test.Category.values,predictions,average='macro')\n",
+    "print(\"Score f1:\",score_f1)"
    ]
   },
   {
@@ -677,7 +723,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.7"
+   "version": "3.6.12"
   }
  },
  "nbformat": 4,
