--- a/Notebooks/first_submission.ipynb
+++ b/Notebooks/first_submission.ipynb
@@ -258,7 +258,9 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
